# moveit_task_constructor

capabilities/: package.xml
capabilities/src/: execute_task_solution_capability.cpp
core/include/moveit/task_constructor/: moveit_compat.h  stage_p.h  storage.h
core/include/moveit/task_constructor/solvers/: pipeline_planner.h
core/include/moveit/task_constructor/stages/: move_to.h
core/src/: container.cpp  stage.cpp  storage.cpp  task.cpp
core/src/solvers/: cartesian_path.cpp  joint_interpolation.cpp  pipeline_planner.cpp
core/src/stages/: compute_ik.cpp  current_state.cpp  fix_collision_objects.cpp  generate_grasp_pose.cpp  generate_place_pose.cpp  move_relative.cpp  move_to.cpp  simple_grasp.cpp
core/test/: CMakeLists.txt  models.h
demo/: CMakeLists.txt  package.xml
demo/include/moveit_task_constructor_demo/: pick_place_task.h
demo/launch/: alternative_path_costs.launch.py  demo.launch.py  pickplace.launch.py
demo/src/: alternative_path_costs.cpp  pick_place_demo.cpp  pick_place_task.cpp
rviz_marker_tools/include/rviz_marker_tools/: marker_creation.h
rviz_marker_tools/src/: marker_creation.cpp
visualization/: CMakeLists.txt
visualization/motion_planning_tasks/properties/: property_from_yaml.cpp
visualization/motion_planning_tasks/src/: CMakeLists.txt  local_task_model.cpp  remote_task_model.cpp  task_display.cpp  task_panel.cpp
visualization/visualization_tools/src/: marker_visualization.cpp
